--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
-root: /
+url: https://groupsky.github.io/hexo-sample-static-site/
+root: /hexo-sample-static-site/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
@@ -78,4 +78,8 @@ theme: bootstrap
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:groupsky/hexo-sample-static-site.git
+  branch: gh-pages
+
+
